# Friendev

./: .gitattributes  .gitignore  AGENTS.md  BIGTODOS-CHINESE.txt  CHANGELOG.TXT  CHANGELOG.md  Cargo.toml  PROMPT_OPTIMIZATION.md  QUICKREF.md  README.md  context7.json  helloworld.py  send.md  test_tool_calls.rs
.friendev/: hooks.json
.friendev/index/: outline.db
.github/: GithubCI-By-Friendev.txt
.github/workflows/: ci.yml
agents_md_file/src/: prompt_generator.rs
api/: Cargo.toml
api/src/: lib.rs
api/src/api/: accumulator.rs  client.rs  client_enhanced.rs  client_enhanced_tests.rs  executor.rs  mod.rs  parser.rs  types.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/app/: command_handler.rs  message_builder.rs  mod.rs  notification.rs  prompt_optimizer.rs  reedline_config.rs  repl.rs  review.rs  startup.rs
app_client/: Cargo.toml
app_client/src/: lib.rs  repl.rs
app_server/: Cargo.toml
app_server/src/: command_handler.rs  lib.rs  service.rs  startup.rs
chat/: Cargo.toml
chat/src/: lib.rs
chat/src/chat/: agent_loop.rs  message_builder.rs  mod.rs  output_formatter.rs  send_receive.rs  stream_handler.rs
codex-api/: Cargo.toml
codex-client/: Cargo.toml
codex-client/src/: retry.rs  sse.rs
commands/: Cargo.toml
commands/src/: lib.rs
commands/src/commands/: history.rs  index.rs  mcp.rs  mod.rs  model.rs  prompt.rs  todo.rs
config/src/config/: defaults.rs  mod.rs  paths.rs  persistence.rs  setup.rs  types.rs  updates.rs
core_shared/: Cargo.toml
core_shared/src/: lib.rs  messages.rs
docs/: HOOKS.md  LSP_CONFIGURATION.md
example/: Automatically-generate-AGENTSmd-file.htm  Demo-Friendev-refactoring-Friendevs-code.htm  Friendev-self-repairs-tool-calling-and-adds-auto-cleanup.htm
example/1/: about.html  by.txt  contact.html  index.html
example/1/css/: styles.css
example/1/js/: script.js
example/2/: by.txt  game.py  utils.py
example/4/: DemoFriendevrefactoringFriendevscode.htm
example/4/DemoFriendevrefactoringFriendevscode.files/: filelist.xml  header.htm
example/5/Automatically-generate-AGENTSmd-file.files/: filelist.xml
examples/: mcp_config.json
history/: Cargo.toml
history/src/history/: session.rs  types.rs
i18n/src/i18n/: en_us.rs  loader.rs  zh_cn.rs
mcp/: Cargo.toml
mcp/src/: config.rs  lib.rs
mcp/src/client/: connection.rs  manager.rs  mod.rs
mcp/src/client/resources/: mod.rs
mcp/src/client/tools/: mod.rs
prompts/: Cargo.toml
prompts/src/: agents_generator_prompt.md  jury_prompt.md  lib.rs  no-used.md  optimizer_prompt.md  review_prompt.md
protocol/: Cargo.toml
protocol/src/: config_types.rs  conversation_id.rs  lib.rs  models.rs  protocol.rs
rpc/: Cargo.toml
rpc/src/: client.rs  lib.rs  protocol.rs  server.rs  service.rs
search_tool/src/search_tool/: client.rs
server/: Cargo.toml
server/src/: main.rs
src/: agents.rs  api.rs  commands.rs  config.rs  history.rs  i18n.rs  main.rs  prompts.rs  tools.rs  ui.rs
src/agents/: gitattributes.rs  loader.rs  project_analyzer.rs  prompt_generator.rs
src/api/: accumulator.rs  client.rs  executor.rs  mod.rs  parser.rs  stream.rs  types.rs
src/app/: command_handler.rs  message_builder.rs  mod.rs  repl.rs  startup.rs
src/chat/: mod.rs  output_formatter.rs  send_receive.rs  stream_handler.rs
src/commands/: agents.rs  language.rs  runcommand.rs
src/config/: defaults.rs  mod.rs  persistence.rs  setup.rs  types.rs  updates.rs
src/history/: management.rs  mod.rs  persistence.rs  session.rs  types.rs
src/i18n/: en_us.rs  loader.rs  mod.rs  zh_cn.rs
src/search_tool/: auto.rs  bing.rs  duckduckgo.rs  html_parser.rs  mod.rs  types.rs
src/tools/: args.rs  command_manager.rs  definitions.rs  executor.rs  mod.rs  types.rs  utils.rs
src/tools/executor/: command_operations.rs  mod.rs
src/tools/executor/file_operations/: file_common.rs  file_diff_edit.rs  file_list.rs  file_read.rs  file_replace.rs  file_write.rs  mod.rs
src/tools/executor/search_operations/: mod.rs  search_auto.rs  search_bing.rs  search_common.rs  search_duckduckgo.rs
src/ui/: approval_prompt.rs  mod.rs  tool_call_display.rs
tools/: Cargo.toml
tools/src/: hooks.rs  lib.rs
tools/src/tools/: args.rs  definitions.rs  indexer.rs  mod.rs  utils.rs
tools/src/tools/executor/: command_operations.rs  lsp_client.rs  mod.rs  parser.rs  todo_operations.rs  utils.rs
tools/src/tools/executor/file_operations/: file_common.rs  file_diff_edit.rs  file_list.rs  file_outline.rs  file_read.rs  file_replace.rs  file_search.rs  file_write.rs  mod.rs
tools/src/tools/executor/network_operations/: fetch_content.rs  mod.rs
tools/src/tools/executor/search_operations/: mod.rs  outline_search.rs  search_auto.rs  search_bing.rs  search_common.rs  search_duckduckgo.rs
ui/src/: lib.rs
ui/src/ui/: approval_prompt.rs  enhanced_output.rs  mod.rs  model_selector.rs  tool_call_display.rs
website/: f.ps1  f.sh  footer.php  header.php  index.html  index.php  install.json  post.php  postlist.php  script.js  style.css
website/content/: jury.md  shorekeeper.md  v0.2.7-subagent.md
website/data/: posts.json
