[package]
name = "friendev"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rustyline = "13"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
termimad = "0.28"
crossterm = "0.27"
dialoguer = "0.11"
