[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
async-openai = { version = "0.31", features = ["rustls", "chat-completion"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }

config = { path = "../config" }
history = { path = "../history" }
mcp = { path = "../mcp" }
tools = { path = "../tools" }
ui = { path = "../ui" }
