[package]
name = "codex-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1"
bytes = "1.0"
codex-client = { path = "../codex-client" }
codex-protocol = { path = "../protocol" }
futures = "0.3"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
eventsource-stream = "0.1"
regex-lite = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1.5"
pretty_assertions = "1.4"
tokio-test = "0.4"
