[package]
name = "codex-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "time", "sync"] }
rand = "0.8"
eventsource-stream = "0.1"
