[package]
name = "commands"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
colored = "2.1"
agents = { path = "../agents_md_file" }
api = { path = "../api" }
config = { path = "../config" }
history = { path = "../history" }
i18n = { path = "../i18n" }
tools = { path = "../tools" }
ui = { path = "../ui" }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.4"
ignore = "0.4"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp = { version = "0.1.0", path = "../mcp" }
chat = { path = "../chat" }
tokio = { version = "1.48.0", features = ["full"] }
dialoguer = "0.12.0"
