[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
colored = "2.1"
console = "0.15"
unicode-width = "0.1"
indicatif = "0.17"
dialoguer = "0.11"
regex = "1.10"
ignore = "0.4"
url = "2.5"
termimad = "0.28"
scraper = "0.19"
html-escape = "0.2"
urlencoding = "2.1"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20" # Downgrade to match core
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-php = "0.20"
tree-sitter-ruby = "0.20"
rusqlite = { version = "0.30", features = ["bundled"] }

search_tool = { path = "../search_tool" }
ui = { path = "../ui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
tokio = { version = "1", features = ["rt","macros","process","time"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"

[dev-dependencies]
httpmock = "0.7"
